--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ itertools = "0.9.0"
 bincode = "1.3.1"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.9"
+tempfile = "3.1.0"
 
 # blst feature
 blstrs = { version = "0.2.0", optional = true }
