fix: use blstrs ser-de branch rebased on 0-1 branch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,4 +82,4 @@ harness = false
 paired = { git = "https://github.com/filecoin-project/paired", branch = "ser-de" }
 fff = { git = "https://github.com/filecoin-project/ff", branch = "ser-de" }
 groupy = { git = "https://github.com/filecoin-project/group", branch = "ser-de" }
-blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "ser-de" }
+blstrs = { git = "https://github.com/cryptonemo/blstrs", branch = "ser-de-0-1" }
